[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/gfx/environment/ground.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/BorderStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/button_border_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/button_border.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/button_border_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/player_border.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/button_left.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/button_right.png" type="Texture" id=10]
[ext_resource path="res://source/menu/MainMenu.gd" type="Script" id=11]
[ext_resource path="res://assets/gfx/characters/soldier.png" type="Texture" id=12]
[ext_resource path="res://assets/gfx/characters/character2.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 1
extra_spacing_top = 5
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 320, 48 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 320, 48 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 320, 48 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.18921
margin_bottom = 1.18921
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 964.0
margin_bottom = 540.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 964.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "soldiers"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="PlayerContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 301.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer"]
margin_right = 301.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Player 1"
align = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer"]
margin_top = 64.0
margin_right = 301.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Player1" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/NinePatchRect"]
position = Vector2( 151, 147 )
scale = Vector2( 15, 15 )
texture = ExtResource( 12 )

[node name="RLButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer"]
margin_top = 360.0
margin_right = 301.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/RLButtonContainer"]
margin_right = 73.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Left" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/RLButtonContainer" groups=["ui_buttons"]]
margin_left = 77.0
margin_right = 109.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 9 )

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/RLButtonContainer"]
margin_left = 113.0
margin_right = 187.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Right" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/RLButtonContainer" groups=["ui_buttons"]]
margin_left = 191.0
margin_right = 223.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 10 )

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer/RLButtonContainer"]
margin_left = 227.0
margin_right = 301.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1Name" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer"]
margin_top = 396.0
margin_right = 301.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )
placeholder_text = "ENTER NAME"

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 331.0
margin_right = 632.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer"]
margin_right = 301.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer/CenterContainer2"]
margin_left = 17.0
margin_top = 4.0
margin_right = 283.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 8 )
text = "Credits:
Kenney.nl - sprites, fonts
programming - stup
music - no music
sfx - bfxr
made in godot 3.2.3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer" groups=["ui_buttons"]]
margin_top = 188.0
margin_right = 301.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 1335.96, -283.591 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "START"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer" groups=["ui_buttons"]]
visible = false
margin_top = 262.0
margin_right = 301.0
margin_bottom = 325.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "CREDITS"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer" groups=["ui_buttons"]]
visible = false
margin_top = 262.0
margin_right = 301.0
margin_bottom = 325.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "ABOUT"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer"]
margin_top = 271.0
margin_right = 301.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ButtonsContainer/CenterContainer"]
margin_left = 26.0
margin_top = 18.0
margin_right = 274.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 8 )
text = "A/D/arrows - Move
W/UP - jump
Left Click / Space - fire
mouse - aim
c - camera zoom out"

[node name="PlayerContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 662.0
margin_right = 964.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2"]
margin_right = 302.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Player 2"
align = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2"]
margin_top = 64.0
margin_right = 302.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Player2" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/NinePatchRect2"]
position = Vector2( 151, 147 )
scale = Vector2( 15, 15 )
texture = ExtResource( 13 )

[node name="RLButtonContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2"]
margin_top = 360.0
margin_right = 302.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/RLButtonContainer2"]
margin_right = 74.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2Left" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/RLButtonContainer2" groups=["ui_buttons"]]
margin_left = 78.0
margin_right = 110.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 9 )

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/RLButtonContainer2"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2Right" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/RLButtonContainer2" groups=["ui_buttons"]]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource( 10 )

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2/RLButtonContainer2"]
margin_left = 228.0
margin_right = 302.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2Name" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerContainer2"]
margin_top = 396.0
margin_right = 302.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = ExtResource( 4 )
placeholder_text = "ENTER NAME"
